fixed issue of hiding dropdown menu behind the card

--- a/src/app/components/core/control-dispatcher/api-flow/api-flow.component.css
+++ b/src/app/components/core/control-dispatcher/api-flow/api-flow.component.css
@@ -13,3 +13,7 @@
 .valign-middle {
     vertical-align: middle;
 }
+
+.api-card-content {
+    overflow: visible;
+}
